<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="S_EarthLocation" Id="{c646be09-86a1-491f-9a2a-dfc1fcbfa2e0}">
    <Declaration><![CDATA[TYPE S_EarthLocation :
STRUCT
	longitude:	LREAL;
	latitude:	LREAL;
	height:		LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>