<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="S_SkyCoordEquatorial" Id="{0bc8efab-a9cb-4bbf-ac60-1625272729f1}">
    <Declaration><![CDATA[TYPE S_SkyCoordEquatorial :
STRUCT
	ra:		LREAL;
	dec:	LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>