<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="S_SkyCoordHorizontal" Id="{bc934920-5c3a-495a-b2a3-4fcfc22f927a}">
    <Declaration><![CDATA[TYPE S_SkyCoordHorizontal :
STRUCT
	alt:	LREAL; // altitude (in degrees)
	az:		LREAL; // azimuth angle (in degrees, measured EAST FROM NORTH)
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>